--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,12 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
