--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
+    "cloudinary-react": "^1.8.1",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1"
   },
