--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "react-native": "0.74.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-swiper-flatlist": "^3.2.4",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,6 +34,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
