--- a/serv/package.json
+++ b/serv/package.json
@@ -16,6 +16,7 @@
     "json": "^11.0.0",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5"
   }
 }
