--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.28.0",
+    "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
