--- a/serv/package.json
+++ b/serv/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "json": "^11.0.0",
