--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-storage": "^1.0.1",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
     "socket.io": "^4.7.5",
