--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
+    "cloudinary-react-native": "^0.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.0",
+    "react-native": "^0.73.8",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
