--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/geolocation": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.0",
@@ -23,6 +24,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-storage": "^1.0.1",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
     "socket.io": "^4.7.5",
