--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,22 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/slider": "^4.5.2",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-storage": "^1.0.1",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
