--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "react": "18.2.0",
-    "react-native": "0.74.0",
+    "react-native": "^0.73.8",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.15.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
