--- a/client/package.json
+++ b/client/package.json
@@ -26,22 +26,18 @@
     "fbjs": "^3.0.5",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
-
     "react-native": "^0.73.8",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.15.1",
-
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-
     "react-native-segmented-control-tab": "^4.0.0",
-
     "react-native-snap-carousel": "^3.9.1",
-
     "react-native-storage": "^1.0.1",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
