--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
