--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,11 @@
     "react-native": "0.74.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-get-location": "^4.0.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.15.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-range-slider": "^0.1.2",
