--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "^0.73.8",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
