--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "victory-native": "^40.2.0"
