--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+// apply plugin: 'com.google.gms.google-services' // <- Add this line
+
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
