--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.8",
     "expo-image-picker": "^15.0.4",
     "fbjs": "^3.0.5",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "^0.73.8",
@@ -56,6 +57,7 @@
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "supercluster": "^8.0.1",
     "victory-native": "^40.2.0"
   },
   "devDependencies": {
