--- a/client/android/build.gradle
+++ b/client/android/build.gradle
@@ -1,5 +1,9 @@
 buildscript {
     ext {
+        // i added those for notifications
+        // googlePlayServicesVersion = "+" // default: "+"
+        // firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+        //
         buildToolsVersion = "34.0.0"
         minSdkVersion = 23
         compileSdkVersion = 34
