--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@stripe/stripe-react-native": "^0.37.3",
     "android": "^0.0.8",
     "axios": "^1.6.8",
     "expo-image-picker": "^15.0.4",
@@ -53,6 +54,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
