--- a/serv/package.json
+++ b/serv/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3",
     "socket.io": "^4.7.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "stripe": "^15.7.0"
   }
 }
