--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-native": "^0.73.8",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^9.2.0",
     "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.16.0",
@@ -41,7 +42,9 @@
     "react-native-maps": "^1.15.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
     "react-native-range-slider": "^0.1.2",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
