--- a/serv/package.json
+++ b/serv/package.json
@@ -11,66 +11,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
-    "dependencies": {
-      "@ptomasroos/react-native-multi-slider": "^2.2.2",
-      "@react-native-async-storage/async-storage": "^1.23.1",
-      "@react-native-community/checkbox": "^0.5.17",
-      "@react-native-community/datetimepicker": "^8.0.0",
-      "@react-native-community/geolocation": "^3.2.1",
-      "@react-native-community/hooks": "^3.0.0",
-      "@react-native-community/slider": "^4.5.2",
-      "@react-native-picker/picker": "^2.7.5",
-      "@react-navigation/bottom-tabs": "^6.5.20",
-      "@react-navigation/native": "^6.1.17",
-      "@react-navigation/native-stack": "^6.9.26",
-      "@react-navigation/stack": "^6.3.29",
-      "axios": "^1.6.8",
-      "lottie-react-native": "^6.7.2",
-      "react": "18.2.0",
-      "react-native": "^0.73.8",
-      "react-native-chart-kit": "^6.12.0",
-      "react-native-elements": "^3.4.3",
-      "react-native-geocoding": "^0.5.0",
-      "react-native-gesture-handler": "^2.16.0",
-      "react-native-get-location": "^4.0.1",
-      "react-native-google-places-autocomplete": "^2.5.6",
-      "react-native-image-picker": "^7.1.2",
-      "react-native-linear-gradient": "^2.8.3",
-      "react-native-maps": "^1.15.1",
-      "react-native-maps-directions": "^1.9.0",
-      "react-native-modal": "^13.0.1",
-      "react-native-paper": "^5.12.3",
-      "react-native-range-slider": "^0.1.2",
-      "react-native-reanimated": "^3.11.0",
-      "react-native-safe-area-context": "^4.10.1",
-      "react-native-screens": "^3.31.1",
-      "react-native-segmented-control-tab": "^4.0.0",
-      "react-native-snap-carousel": "^3.9.1",
-      "react-native-svg": "^15.2.0",
-      "react-native-swiper-flatlist": "^3.2.4",
-      "react-native-vector-icons": "^10.1.0",
-      "react-redux": "^9.1.2",
-      "socket.io": "^4.7.5",
-      "socket.io-client": "^4.7.5",
-      "victory-native": "^40.2.0"
-    },
-    "devDependencies": {
-      "@babel/core": "^7.20.0",
-      "@babel/preset-env": "^7.20.0",
-      "@babel/runtime": "^7.20.0",
-      "@react-native/babel-preset": "0.74.81",
-      "@react-native/eslint-config": "0.74.81",
-      "@react-native/metro-config": "0.74.81",
-      "babel-jest": "^29.6.3",
-      "jest": "^29.6.3",
-      "prettier": "2.8.8",
-      "react-native-dotenv": "^3.4.11",
-      "react-test-renderer": "18.2.0",
-      "typescript": "5.0.4"
-    },
-    "engines": {
-      "node": ">=18"
-    }
+  "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "config": "^3.3.11",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase-admin": "^12.1.0",
+    "json": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.7",
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
+    "sqlite3": "^5.1.7",
+    "stripe": "^15.7.0"
   }
-  
+}
